# EnvelopeCLI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EnvelopeCLI-PRD-MVP.docx  HANDOFF-autofill-targets-tui.md  HANDOFF-budget-targets.md  HANDOFF-bydate-progress-complete.md  IMPLEMENTATION-PLAN.md  INCOME_FEATURE_IMPLEMENTATION.md  INSTALL.md  LICENSE  OPTIMIZATION-SUGGESTIONS.md  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
docs/: commands.md  data-format.md  keyboard-shortcuts.md  troubleshooting.md
src/: error.rs  lib.rs  main.rs
src/audit/: diff.rs  entry.rs  logger.rs  mod.rs
src/backup/: manager.rs  mod.rs  restore.rs
src/cli/: account.rs  backup.rs  budget.rs  category.rs  encrypt.rs  export.rs  import.rs  income.rs  mod.rs  payee.rs  reconcile.rs  report.rs  target.rs  transaction.rs  transfer.rs
src/config/: mod.rs  paths.rs  settings.rs
src/crypto/: encryption.rs  key_derivation.rs  mod.rs  secure_memory.rs
src/display/: account.rs  category.rs  mod.rs  report.rs  transaction.rs
src/export/: csv.rs  json.rs  mod.rs  yaml.rs
src/models/: account.rs  budget.rs  category.rs  ids.rs  income.rs  mod.rs  money.rs  payee.rs  period.rs  target.rs  transaction.rs
src/reports/: account_register.rs  budget_overview.rs  mod.rs  net_worth.rs  spending.rs
src/services/: account.rs  budget.rs  category.rs  import.rs  income.rs  mod.rs  payee.rs  period.rs  reconciliation.rs  transaction.rs  transfer.rs
src/setup/: mod.rs  wizard.rs
src/setup/steps/: account.rs  categories.rs  mod.rs  period.rs
src/storage/: accounts.rs  budget.rs  categories.rs  file_io.rs  income.rs  init.rs  mod.rs  payees.rs  targets.rs  transactions.rs
src/tui/: app.rs  commands.rs  event.rs  handler.rs  keybindings.rs  layout.rs  mod.rs  terminal.rs
src/tui/dialogs/: account.rs  adjustment.rs  budget.rs  bulk_categorize.rs  category.rs  command_palette.rs  confirm.rs  edit_budget.rs  group.rs  help.rs  income.rs  mod.rs  move_funds.rs  reconcile_start.rs  target.rs  transaction.rs  unlock_confirm.rs
src/tui/views/: account_list.rs  budget.rs  mod.rs  reconcile.rs  register.rs  sidebar.rs  status_bar.rs
src/tui/widgets/: error_dialog.rs  input.rs  mod.rs  notification.rs
