[package]
name = "envelope"
version = "0.1.0"
edition = "2021"
authors = ["Kaylee Beyene"]
description = "Terminal-based zero-based budgeting application"
license = "MIT"
repository = "https://github.com/KayleeBeyene/EnvelopeCLI"
keywords = ["budgeting", "finance", "tui", "cli", "ynab"]
categories = ["command-line-utilities", "finance"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Paths
directories = "5.0"

# Encryption
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
zeroize = { version = "1.7", features = ["derive"] }
rpassword = "7.3"

# CSV (for later phases)
csv = "1.3"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "envelope"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
