[package]
name = "envelope-cli"
version = "0.1.3"
edition = "2021"
authors = ["Kaylee Beyene"]
description = "Terminal-based zero-based budgeting application"
license = "MIT"
repository = "https://github.com/KayleeBeyene/EnvelopeCLI"
homepage = "https://github.com/KayleeBeyene/EnvelopeCLI"
keywords = ["budgeting", "finance", "tui", "cli", "ynab"]
categories = ["command-line-utilities", "finance"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
tabled = "0.17"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Paths
directories = "5.0"

# Encryption
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
zeroize = { version = "1.7", features = ["derive"] }
rpassword = "7.3"

# CSV (for later phases)
csv = "1.3"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "envelope"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Alarm if this is different)
cargo-dist-version = "0.30.2"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build for
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to auto-include files like LICENSE/README
auto-includes = true
# Allow manual edits to CI workflow (we added --clobber flag)
allow-dirty = ["ci"]

# Homebrew tap configuration
[workspace.metadata.dist.homebrew]
tap = "KayleeBeyene/homebrew-tap"
formula = "envelope-cli"
